--- a/polling-system/client/src/App.css
+++ b/polling-system/client/src/App.css
@@ -803,17 +803,21 @@ button:hover {
 }
 
 .kick-btn {
-  background: #ff5252;
-  color: white;
-  border: none;
-  width: 24px;
-  height: 24px;
-  border-radius: 50%;
-  cursor: pointer;
-  font-size: 14px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+    width: 24px;
+    height: 34px;
+    border-radius: 8%;
+    background: #e15757;
+    color: white;
+    border: none;
+    cursor: pointer;
+    display: grid;
+    place-items: center;
+    font-size: 14px;
+}
+.kick-btn:hover {
+    background: #ff5252;
+    transform: translateY(-1px);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 
